openvpn/templates/deployment.gotmpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: ghcr.io/wfg/wireguard:latest
          securityContext:
            privileged: true
          volumeMounts:
            - name: wireguard-vpn-config
              mountPath: /etc/wireguard
          ports:
            - containerPort: 3128
              name: proxy
      volumes:
        - name: wireguard-vpn-config
          secret:
            secretName: wireguard-vpn-config-secret
