openvpn/templates/service.gotmpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-vpn-proxy
  namespace: vpn
spec:
  selector:
    app: wireguard
  ports:
    - name: proxy
      port: 3128
      targetPort: 3128
